# phraser

./: .gitignore  README.md  annotation.py  cache.py  dummy_data_generator.py  example_env  file_handler.py  force_align.py  key_helper.py  lmdb_cache.py  lmdb_helper.py  lmdb_key.py  load.py  load_cgn_to_db.py  load_to_db.py  locations.py  model_helper.py  models.py  phone_types.json  play_audio.py  process_cgn.py  pyproject.toml  query.py  requirements.txt  speaker.py  struct_helper.py  struct_key.py  struct_value.py  utils.py
.githooks/: pre-commit
docs/: NOTE_query_key_staleness.md  NOTE_textgrid_loader_cleanup.md  PLAN_codebook_indices.md  PLAN_embedding_retrieval.md  PLAN_segment_embeddings_refactor.md  PLAN_segment_linking.md  PLAN_store_resolution_cleanup.md
phraser/: __init__.py  audio.py  cache.py  check_overlap.py  comparison.py  key_helper.py  lmdb_helper.py  locations.py  model_helper.py  models.py  phone_features.py  phone_types.py  query.py  resyllabifier.py  save_validation.py  segment.py  segment_embeddings.py  store.py  struct_helper.py  struct_value.py  syllabify_phones.py  syllable_structure.py  textgrid_loader.py  utils.py
phraser/data/: ipa_features.json
scripts/: __init__.py  build_ipa_features.py  check_style.py  dummy_data_generator.py  fix_syllable_labels.py  load_cgn_to_db.py  load_to_db.py  process_cgn.py
tests/: test_check_overlap.py  test_phone_features.py  test_position_on_ingest.py  test_resyllabify.py  test_segment_codebook_indices.py  test_segment_embedding_fallback.py  test_segment_embeddings.py  test_segment_embeddings_f1.py  test_segment_embeddings_f2.py  test_segment_embeddings_f3.py  test_segment_embeddings_f4.py  test_segment_embeddings_f5.py  test_segment_embeddings_forwarding.py  test_segment_linking.py  test_store_binding.py  test_syllabify_phones.py  test_syllable_structure.py  tester.py
