[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phraser"
version = "0.1.15"
description = "LMDB-backed phrase and segment tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "librosa",
  "soundfile",
  "soxr",
  "numba",
  "lmdb",
  "msgpack",
  "requests",
  "python-decouple",
  "progressbar2",
  "textgrid",
  "matplotlib",
  "echoframe @ git+https://github.com/martijnbentum/echoframe.git",
  "ssh-audio-play @ git+https://github.com/martijnbentum/ssh-audio-play.git",
  "webmaus @ git+https://github.com/martijnbentum/webmaus.git",
  "frame @ git+https://github.com/martijnbentum/frame.git",
  "to-vector @ git+https://github.com/martijnbentum/to_vector.git",
]

[tool.setuptools]
packages = ["phraser", "scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
