[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phraser"
version = "0.2.24"
description = "LMDB-backed phrase and segment tooling"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "numpy",
  "scipy",
  "scikit-learn",
  "librosa",
  "soundfile",
  "soxr",
  "numba",
  "lmdb",
  "msgpack",
  "requests",
  "python-decouple",
  "progressbar2",
  "textgrid",
  "matplotlib",
  "dutch-text-clean @ git+https://github.com/martijnbentum/dutch-text-clean.git",
  "ssh-audio-play @ git+https://github.com/martijnbentum/ssh-audio-play.git",
  "webmaus @ git+https://github.com/martijnbentum/webmaus.git",
  "frame @ git+https://github.com/martijnbentum/frame.git",
  "dutch-syllabifier @ git+https://github.com/martijnbentum/dutch-syllabifier.git",
]

[tool.setuptools]
packages = ["phraser", "scripts"]

[tool.setuptools.package-data]
phraser = ["data/*.json"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
